--- a/events/index.html
+++ b/events/index.html
@@ -55,6 +55,7 @@
                 <li><a href="/faq" >FAQ</a></li>
                 <li><a href="/events" class="active">Events</a></li>
                 <li><a href="/blog" >Blog</a></li>
+                <li><a href="/map" >Map</a></li>
                 <li><a href="/twitter" >Twitter</a></li>
                 <li><a href="/about" >About</a></li>
                 <li><a href="/contact" >Contact</a></li>
@@ -66,7 +67,7 @@
         <div class="jumbotron">Tour Events</div>
 <div class="body">
     <div class="event-section">Upcoming</div>
-                                <div class="row appearance">
+                        <div class="row appearance">
 		<div class="col-md-3 text-right appearance-date">
 			January 12, 2015
 		</div>
