--- a/faq/index.html
+++ b/faq/index.html
@@ -55,6 +55,7 @@
                 <li><a href="/faq" class="active">FAQ</a></li>
                 <li><a href="/events" >Events</a></li>
                 <li><a href="/blog" >Blog</a></li>
+                <li><a href="/map" >Map</a></li>
                 <li><a href="/twitter" >Twitter</a></li>
                 <li><a href="/about" >About</a></li>
                 <li><a href="/contact" >Contact</a></li>
@@ -66,12 +67,12 @@
         <div class="jumbotron">Frequently Asked Questions</div>
 <div class="body standard-text">
     <dl class="faq">
-		<dt>Can I lorem the ipsum datum?</dt>
-		<dd>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam lorem erat, luctus at diam sed, dapibus facilisis purus. In laoreet enim nunc, ut pretium arcu scelerisque in. Nunc eu cursus nibh. Etiam pulvinar vulputate libero sed molestie. In condimentum varius faucibus. Vestibulum non blandit sapien, quis tincidunt augue. Aliquam congue sapien eget mattis sagittis.</dd>
-		<dt>Can I lorem the ipsum datum?</dt>
-		<dd>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam lorem erat, luctus at diam sed, dapibus facilisis purus. In laoreet enim nunc, ut pretium arcu scelerisque in. Nunc eu cursus nibh. Etiam pulvinar vulputate libero sed molestie. In condimentum varius faucibus. Vestibulum non blandit sapien, quis tincidunt augue. Aliquam congue sapien eget mattis sagittis.</dd>
-    </dl>
+                    
+<dt>So what&#039;s with the crazy penguin?</dt>
+<dd>This is an answer.</dd>
+        	</dl>
 </div>
+
         <footer class="primary-footer">
             &copy; 2015 Wisdom as a Service &nbsp;&nbsp;|&nbsp;&nbsp; <a href="http://twitter.com/coderabbi"><i class="fa fa-twitter primary-footer__social"></i></a>
         </footer>
