--- a/faqs/penguin/index.html
+++ b/faqs/penguin/index.html
@@ -5,9 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>
-            Talk: Get Off the Freelance Roller-Coaster&lt;br&gt;
-Talk: Inside Laravel 5.0
- &middot; Wisdom as a Service
+            Wisdom as a Service
     </title>    <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@wisdomtour">
     <meta name="twitter:creator" content="@wisdomtour">
