--- a/map/index.html
+++ b/map/index.html
@@ -5,9 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>
-            Talk: Get Off the Freelance Roller-Coaster&lt;br&gt;
-Talk: Inside Laravel 5.0
- &middot; Wisdom as a Service
+            Map &middot; Wisdom as a Service
     </title>    <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@wisdomtour">
     <meta name="twitter:creator" content="@wisdomtour">
@@ -57,7 +55,7 @@ Talk: Inside Laravel 5.0
                 <li><a href="/faq" >FAQ</a></li>
                 <li><a href="/events" >Events</a></li>
                 <li><a href="/blog" >Blog</a></li>
-                <li><a href="/map" >Map</a></li>
+                <li><a href="/map" class="active">Map</a></li>
                 <li><a href="/twitter" >Twitter</a></li>
                 <li><a href="/about" >About</a></li>
                 <li><a href="/contact" >Contact</a></li>
@@ -66,7 +64,10 @@ Talk: Inside Laravel 5.0
     </header>
 
     <div class="content">
-        
+        <div class="jumbotron">Tour Map</div>
+<div class="body">
+    <iframe src="https://mapsengine.google.com/map/u/0/embed?mid=zHQDbgFAuLwo.kHqKzxb0VSpA" width="1144" height="904" style="overflow:hidden; margin-left:-2px; border:2px solid #e8e8e8; border-radius: 5px;"></iframe>
+</div>
         <footer class="primary-footer">
             &copy; 2015 Wisdom as a Service &nbsp;&nbsp;|&nbsp;&nbsp; <a href="http://twitter.com/coderabbi"><i class="fa fa-twitter primary-footer__social"></i></a>
         </footer>
