--- a/twitter/index.html
+++ b/twitter/index.html
@@ -55,6 +55,7 @@
                 <li><a href="/faq" >FAQ</a></li>
                 <li><a href="/events" >Events</a></li>
                 <li><a href="/blog" >Blog</a></li>
+                <li><a href="/map" >Map</a></li>
                 <li><a href="/twitter" class="active">Twitter</a></li>
                 <li><a href="/about" >About</a></li>
                 <li><a href="/contact" >Contact</a></li>
@@ -71,8 +72,12 @@
     }
 </style>
 <div class="jumbotron">Twitter Stream</div>
-    <div class="body">
-    <a class="twitter-timeline" href="https://twitter.com/coderabbi" data-widget-id="504357098948276224">Tweets by @coderabbi</a>
+<div class="body">
+    <a class="twitter-timeline" href="https://twitter.com/WisdomWorldTour" data-widget-id="550771475100475392">Tweets by @coderabbi</a>
+    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+</div>
+<div class="body">
+    <a class="twitter-timeline" href="https://twitter.com/hashtag/wisdomtour" data-widget-id="550773232547409920">Tweets by @coderabbi</a>
     <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 </div>
         <footer class="primary-footer">
