--- a/about/index.html
+++ b/about/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>
-            About &middot; Wisdom as a Service
+            About the Tour &middot; Wisdom as a Service
     </title>    <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@wisdomtour">
     <meta name="twitter:creator" content="@wisdomtour">
@@ -64,7 +64,7 @@
     </header>
 
     <div class="content">
-        <div class="jumbotron">About the Tour</div>
+        <div class="marquee">About the Tour</div>
 <div class="body standard-text">
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris vitae tortor imperdiet, cursus nibh quis, eleifend libero. Praesent porttitor felis eu bibendum pharetra. Morbi pulvinar laoreet est, vitae commodo mi bibendum ac. Maecenas sagittis est eget libero dapibus, in pulvinar nibh venenatis. Integer vel feugiat massa, et iaculis erat. Duis in nisi sapien. Aenean sed quam diam.
     <br>
