--- a/faq/index.html
+++ b/faq/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>
-            FAQ &middot; Wisdom as a Service
+            Frequently Asked Questions &middot; Wisdom as a Service
     </title>    <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@wisdomtour">
     <meta name="twitter:creator" content="@wisdomtour">
@@ -64,8 +64,8 @@
     </header>
 
     <div class="content">
-        <div class="jumbotron">Frequently Asked Questions</div>
-<div class="body standard-text">
+        <div class="marquee">Frequently Asked Questions</div>
+<div class="body">
     <dl class="faq">
                     
 <dt>So what&#039;s with the crazy penguin?</dt>
