--- a/contact/index.html
+++ b/contact/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>
-            Contact &middot; Wisdom as a Service
+            Contact Us &middot; Wisdom as a Service
     </title>    <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@wisdomtour">
     <meta name="twitter:creator" content="@wisdomtour">
@@ -64,18 +64,25 @@
     </header>
 
     <div class="content">
-        <div class="jumbotron">Contact Us</div>
+        <div class="marquee">Contact Us</div>
 <div class="body standard-text">
-    <p >Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris vitae tortor imperdiet, cursus nibh quis, eleifend libero. Praesent porttitor felis eu bibendum pharetra. Morbi pulvinar laoreet est, vitae commodo mi bibendum ac. Maecenas sagittis est eget libero dapibus, in pulvinar nibh venenatis. Integer vel feugiat massa, et iaculis erat. Duis in nisi sapien. Aenean sed quam diam.
+    Are you a:
+    <ul>
+        <li>Leader of a User Group that hopes to be included in the Tour?</li>
+        <li>Speaker interested in participating in one or more Tour events?</li>
+        <li>Representative of an organization that would like more information regarding sponsorship opportunities?</li>
+        <li>Developer that wants to join the conversation?</li>
+    </ul>
+    We would love to hear from you!  Please use the form below or contact us at <a href="mailto:info@wisdomworldtour.com" target="_top">info@wisdomworldtour.com</a>.
     <form class="row contact">
 		<div class="form-group col-md-8">
-			<input type="text" class="form-control" placeholder="Name" name="name">
+			<input type="text" class="form-control" placeholder="Name" name="name" required>
 		</div>
 		<div class="form-group col-md-8">
-			<input type="email" class="form-control" placeholder="E-mail address" name="email">
+			<input type="email" class="form-control" placeholder="E-mail address" name="email" required>
 		</div>
 		<div class="form-group col-md-12">
-			<textarea class="form-control" rows="8" name="body" placeholder="Share what's on your mind..."></textarea>
+			<textarea class="form-control" rows="8" name="body" placeholder="Share what's on your mind..." required></textarea>
 		</div>
 		<div class="col-md-12">
 			<button type="submit" class="btn btn-default">Submit</button>
