--- a/events/index.html
+++ b/events/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>
-            Events &middot; Wisdom as a Service
+            Tour Events &middot; Wisdom as a Service
     </title>    <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@wisdomtour">
     <meta name="twitter:creator" content="@wisdomtour">
@@ -64,7 +64,7 @@
     </header>
 
     <div class="content">
-        <div class="jumbotron">Tour Events</div>
+        <div class="marquee">Tour Events</div>
 <div class="body">
     <div class="event-section">Upcoming</div>
                         <div class="row appearance">
