--- a/sponsor/index.html
+++ b/sponsor/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>
-            Sponsor &middot; Wisdom as a Service
+            Sponsorship Opportunities &middot; Wisdom as a Service
     </title>    <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@wisdomtour">
     <meta name="twitter:creator" content="@wisdomtour">
@@ -64,7 +64,7 @@
     </header>
 
     <div class="content">
-        <div class="jumbotron">Sponsorship Opportunities</div>
+        <div class="marquee">Sponsorship Opportunities</div>
 <div class="body standard-text">
     Thanks to the generous support of our sponsors year after year we're able to present this conference at minimal cost to our attendees, opening up attendance to many who could not normally justify the cost of similar events. We couldn't do it without their support and we hope that this year you'll help us share this experience with the community.
 </div>
