--- a/twitter/index.html
+++ b/twitter/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>
-            Twitter &middot; Wisdom as a Service
+            Twitter Streams &middot; Wisdom as a Service
     </title>    <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@wisdomtour">
     <meta name="twitter:creator" content="@wisdomtour">
@@ -67,11 +67,10 @@
         <style>
     iframe[id^='twitter-widget-'] {
         width:100% !important;
-        border: 1px solid #e8e8e8 !important;
+        border: 2px solid #e8e8e8 !important;
         border-radius: 7px !important;
     }
 </style>
-<div class="jumbotron">Twitter Stream</div>
 <div class="body">
     <a class="twitter-timeline" href="https://twitter.com/WisdomWorldTour" data-widget-id="550771475100475392">Tweets by @coderabbi</a>
     <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
