--- a/events/index.html
+++ b/events/index.html
@@ -184,7 +184,7 @@ Talk: From London to Chicago: A Conceptual Map for Unit Testing
 		<div class="col-md-9 appearance-details">
 						<p class="appearance-details__event">Lakewood Web Developers Meetup
 						<div class="appearance-details__location">Lakewood, New Jersey</div>
-			<p class="appearance-details__title">Talk: Talmudic Maxims to Maximize Your Growth as a Developer</p>
+			<p class="appearance-details__title">Talk: TBD</p>
 		</div>
     </div>                        <div class="row appearance">
 		<div class="col-md-3 text-right appearance-date">
