add sponsor logos

--- a/about/index.html
+++ b/about/index.html
@@ -51,7 +51,8 @@
 
         <div class="collapse navbar-collapse" id="mobile_nav">
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="/sponsor" >Sponsor</a></li>
+                <li><a href="/support" >Support</a></li>
+                <li><a href="/sponsors" >Sponsors</a></li>
                 <li><a href="/faq" >FAQ</a></li>
                 <li><a href="/events" >Events</a></li>
                 <li><a href="/blog" >Blog</a></li>
@@ -59,7 +60,7 @@
                 <li><a href="/twitter" >Twitter</a></li>
                 <li><a href="/about" class="active">About</a></li>
                 <li><a href="/contact" >Contact</a></li>
-                </ul>
+            </ul>
         </div>
     </header>
 
@@ -69,6 +70,9 @@
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris vitae tortor imperdiet, cursus nibh quis, eleifend libero. Praesent porttitor felis eu bibendum pharetra. Morbi pulvinar laoreet est, vitae commodo mi bibendum ac. Maecenas sagittis est eget libero dapibus, in pulvinar nibh venenatis. Integer vel feugiat massa, et iaculis erat. Duis in nisi sapien. Aenean sed quam diam.
     <br>
     <p>Nunc    porta eu libero at vestibulum. Maecenas eu nibh eu ex ultricies convallis. Sed quis dolor efficitur, egestas tortor vehicula, tempor orci. Curabitur eu vehicula tortor, id tincidunt ipsum. Cras non risus enim. Nam ultricies mauris sem, at efficitur velit pulvinar vel. Suspendisse quis pellentesque orci, at lacinia mauris. Suspendisse cursus dolor non velit commodo, id accumsan risus finibus. Proin tempus mollis libero, at semper enim.
+</div>
+<div class="outro">
+    <p class="text-center">If you would like your message included as part of this worldwide conversation, please review the <a href="sponsor">Sponsorship Prospectus</a>.</p>
 </div>
         <footer class="primary-footer">
             &copy; 2015 Wisdom as a Service &nbsp;&nbsp;|&nbsp;&nbsp; <a href="http://twitter.com/coderabbi"><i class="fa fa-twitter primary-footer__social"></i></a>
