--- a/events/index.html
+++ b/events/index.html
@@ -51,7 +51,8 @@
 
         <div class="collapse navbar-collapse" id="mobile_nav">
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="/sponsor" >Sponsor</a></li>
+                <li><a href="/support" >Support</a></li>
+                <li><a href="/sponsors" >Sponsors</a></li>
                 <li><a href="/faq" >FAQ</a></li>
                 <li><a href="/events" class="active">Events</a></li>
                 <li><a href="/blog" >Blog</a></li>
@@ -59,7 +60,7 @@
                 <li><a href="/twitter" >Twitter</a></li>
                 <li><a href="/about" >About</a></li>
                 <li><a href="/contact" >Contact</a></li>
-                </ul>
+            </ul>
         </div>
     </header>
 
@@ -245,6 +246,9 @@ Tutorial: Wax On, Wax Off - Coder Dojo, A Code Kata Workshop
 			<p class="appearance-details__title">Keynote: Talmudic Maxims to Maximize Your Growth as a Developer</p>
 		</div>
     </div>        </div>
+<div class="outro">
+    <p class="text-center">If you would like your message included as part of this worldwide conversation, please review the <a href="sponsor">Sponsorship Prospectus</a>.</p>
+</div>
         <footer class="primary-footer">
             &copy; 2015 Wisdom as a Service &nbsp;&nbsp;|&nbsp;&nbsp; <a href="http://twitter.com/coderabbi"><i class="fa fa-twitter primary-footer__social"></i></a>
         </footer>
