--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
 
         <div class="collapse navbar-collapse" id="mobile_nav">
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="/sponsor" >Sponsor</a></li>
+                <li><a href="/support" >Support</a></li>
+                <li><a href="/sponsors" >Sponsors</a></li>
                 <li><a href="/faq" >FAQ</a></li>
                 <li><a href="/events" >Events</a></li>
                 <li><a href="/blog" >Blog</a></li>
@@ -59,7 +60,7 @@
                 <li><a href="/twitter" >Twitter</a></li>
                 <li><a href="/about" >About</a></li>
                 <li><a href="/contact" >Contact</a></li>
-                </ul>
+            </ul>
         </div>
     </header>
 
@@ -79,20 +80,26 @@
 
 <div class="sponsors">
     <div class="sponsor-grid row">
-        <div class="col-lg-4"><img src="http://placehold.it/360x180"></div>
-        <div class="col-lg-4"><img src="http://placehold.it/360x180"></div>
-        <div class="col-lg-4"><img src="http://placehold.it/360x180"></div>
+        <div class="col-lg-12"><div class="sponsor-image-top one-col">Your Logo Here</div></div>
     </div>
-
-    <div class="sponsor-grid row">
-        <div class="col-lg-6"><img src="http://placehold.it/600x300"></div>
-        <div class="col-lg-6"><img src="http://placehold.it/600x300"></div>
+    <div class="row">
+        <div class="col-lg-12"><div class="sponsor-image-bottom titanium">Benefactor</div></div>
     </div>
-
     <div class="sponsor-grid row">
-        <div class="col-lg-4"><img src="http://placehold.it/360x180"></div>
-        <div class="col-lg-4"><img src="http://placehold.it/360x180"></div>
-        <div class="col-lg-4"><img src="http://placehold.it/360x180"></div>
+        <div class="col-lg-6"><div class="sponsor-image-top two-col">Your Logo Here</div></div>
+        <div class="col-lg-6"><div class="sponsor-image-top two-col">Your Logo Here</div></div>
+    </div>
+    <div class="row">
+        <div class="col-lg-6"><div class="sponsor-image-bottom platinum">Partner</div></div>
+        <div class="col-lg-6"><div class="sponsor-image-bottom platinum">Partner</div></div>
+    </div>
+    <div class="sponsor-grid row">
+        <div class="col-lg-6"><div class="sponsor-image-top two-col">Your Logo Here</div></div>
+        <div class="col-lg-6"><div class="sponsor-image-top two-col">Your Logo Here</div></div>
+    </div>
+    <div class="row">
+        <div class="col-lg-6"><div class="sponsor-image-bottom platinum">Partner</div></div>
+        <div class="col-lg-6"><div class="sponsor-image-bottom platinum">Partner</div></div>
     </div>
 </div>
 
