--- a/events/2015-02-20/index.html
+++ b/events/2015-02-20/index.html
@@ -53,7 +53,8 @@ Talk: From London to Chicago: A Conceptual Map for Unit Testing
 
         <div class="collapse navbar-collapse" id="mobile_nav">
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="/sponsor" >Sponsor</a></li>
+                <li><a href="/support" >Support</a></li>
+                <li><a href="/sponsors" >Sponsors</a></li>
                 <li><a href="/faq" >FAQ</a></li>
                 <li><a href="/events" >Events</a></li>
                 <li><a href="/blog" >Blog</a></li>
@@ -61,7 +62,7 @@ Talk: From London to Chicago: A Conceptual Map for Unit Testing
                 <li><a href="/twitter" >Twitter</a></li>
                 <li><a href="/about" >About</a></li>
                 <li><a href="/contact" >Contact</a></li>
-                </ul>
+            </ul>
         </div>
     </header>
 
