--- a/support/index.html
+++ b/support/index.html
@@ -5,9 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>
-            Talk: Talmudic Maxims to Maximize Your Growth as a Developer&lt;br&gt;
-Tutorial: Wax On, Wax Off - Coder Dojo, A Code Kata Workshop
- &middot; Wisdom as a Service
+            Sponsorship Opportunities &middot; Wisdom as a Service
     </title>    <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@wisdomtour">
     <meta name="twitter:creator" content="@wisdomtour">
@@ -53,7 +51,7 @@ Tutorial: Wax On, Wax Off - Coder Dojo, A Code Kata Workshop
 
         <div class="collapse navbar-collapse" id="mobile_nav">
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="/support" >Support</a></li>
+                <li><a href="/support" class="active">Support</a></li>
                 <li><a href="/sponsors" >Sponsors</a></li>
                 <li><a href="/faq" >FAQ</a></li>
                 <li><a href="/events" >Events</a></li>
@@ -67,7 +65,10 @@ Tutorial: Wax On, Wax Off - Coder Dojo, A Code Kata Workshop
     </header>
 
     <div class="content">
-        
+        <div class="marquee">Sponsorship Opportunities</div>
+<div class="body standard-text">
+    Thanks to the generous support of our sponsors year after year we're able to present this conference at minimal cost to our attendees, opening up attendance to many who could not normally justify the cost of similar events. We couldn't do it without their support and we hope that this year you'll help us share this experience with the community.
+</div>
         <footer class="primary-footer">
             &copy; 2015 Wisdom as a Service &nbsp;&nbsp;|&nbsp;&nbsp; <a href="http://twitter.com/coderabbi"><i class="fa fa-twitter primary-footer__social"></i></a>
         </footer>
